manifest/futuresight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: futuresight
  labels:
    app.kubernetes.io/name: futuresight
spec:
  selector:
    app.kubernetes.io/name: futuresight
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
    - port: 8080
      targetPort: 3001
      protocol: TCP
      name: internalapi
